--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
         <div class="col-md-8">
             <div class="row">
                 <div class="destaque">
-                    <img src="./img/black-clover.png">
+                    <img src="./img/black clover.png">
                     <div class="desc_img__overlay">
                         <div class="desc_img__title">BLACK CLOVER: A Espada do Rei Mago</div>
                         <p class="desc_img__txt">Em Black Clover: A Espada do Rei Mago, 
