--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <a href="#destaque" class="btn btn-lg btn-custom btn-branco">
                                     aproveite nossa seleção
                                 </a>
-                                <a href="" class="btn btn-lg btn-custom btn-roxo">
+                                <a href="login.html" class="btn btn-lg btn-custom btn-roxo">
                                     faça sua sugestão
                                 </a>
                             </div>
