--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
     </div>
 
     <!--live share component-->
-    <div class="row">
+    <div class="row" #liveshare>
         <div class="col-12">
             <div class="row">
                 <div class="col-md-2"></div>
