--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
     <div id="destaque" class="row bg-black">
         <div class="col-md-2"></div> 
         <div class="col-md-8">
-            <div class="row">
+            <div class="row" id="destaque-bk">
                 <div class="destaque">
                     <img src="./img/black clover.png">
                     <div class="desc_img__overlay">
