--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@
                     </swiper-slide>
     
                     <swiper-slide>
-                        <img src="./img/AN-72.png">
+                        <img src="./img/AN-72.jpg">
                         <div class="img__overlay">
                             <div class="img__title">Saiki Kusuo</div>
                             <p class="img__txt">To the average person, psychic abilities might seem a blessing; for Kusuo Saiki,
