--- a/index.html
+++ b/index.html
@@ -1674,7 +1674,7 @@
             <div class="col-md-8">
                 <div class="feed-header">
                     <h2>Suspense</h2>
-                    <p>Confira essa seleção de animes para assistir no escuro..</p>
+                    <p>Confira essa seleção de animes para assistir no escuro.</p>
                     <div class="feed-divider"></div>
                 </div>
                 
